# summarizer

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
dict/: Makefile.am  Makefile.in  en.xml
etc/: Makefile.am  Makefile.in  summarizerd
src/: Makefile.am  Makefile.in  daemon.h  daemontest.c  header.h  lib.c  summarizer.c  summarizerd.c
